Adds appsettings sample and payment webhook test
Adds a sample appsettings file to guide configuration.
Excludes the actual appsettings.json from git tracking, but includes a sample.

Enhances the webhook test controller with a payment webhook test.
This allows testing the payment pipeline with correlation.

--- a/.gitignore
+++ b/.gitignore
@@ -79,8 +79,9 @@ Reports/
 
 # Sensitive configuration
 appsettings.Development.json
+appsettings.json
 appsettings.*.json
-!appsettings.json
+!appsettings.sample.json
 
 # Database files
 *.mdf
